cmake_minimum_required(VERSION 3.22)
project(Proyecto2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto2 main.cpp Paciente.h Paciente.cpp Profesor.h Profesor.cpp Estudiante.h Estudiante.cpp NodoPacienteProfesor.cpp NodoPacienteProfesor.h Medico.h Medico.cpp Transporte.h Transporte.cpp Fecha.cpp Fecha.h Hora.cpp Hora.h Saluduni.cpp Saluduni.h Menu.h Menu.cpp Cita.cpp Cita.h ListaCita.cpp ListaCita.h NodoCita.cpp NodoCita.h NodoMedico.cpp NodoMedico.h NodoPacienteEstudiante.cpp NodoTransporte.cpp NodoTransporte.h ListaMedico.cpp ListaMedico.h ListaPacienteEstudiante.cpp ListaPacienteEstudiante.h ListaTransporte.cpp ListaTransporte.h Facilitadores.cpp Facilitadores.h ListaPacienteProfesor.cpp ListaPacienteProfesor.h NodoPacienteEstudiante.h NodoPacienteEstudiante.cpp)
